--- a/billframe.html
+++ b/billframe.html
@@ -16,7 +16,7 @@
     background-color: #f0f0f0;
 } */
 body {
-    background-color: white;
+    background-color: rgb(221, 201, 201);
     display: flex;
     justify-content: center;
     align-items: center;
